add readme and deps

--- a/upgrade_panos_v10.yml
+++ b/upgrade_panos_v10.yml
@@ -22,6 +22,8 @@
           - pan-python
           - pandevice
           - xmltodict
+          - requests
+          - requests_toolbelt
 
     - name: Show System Info
       panos_op:
@@ -33,6 +35,9 @@
       delay: 60
 
     - set_fact: system_info_json="{{ system_info.stdout | from_json }}"
+
+    - name: Show Version
+      debug: msg="Current Version is {{ system_info_json.response.result.system['sw-version'] }} "
 
     - name: Activate my authcode
       panos_lic:
