--- a/upgrade_panos_v10.yml
+++ b/upgrade_panos_v10.yml
@@ -136,9 +136,20 @@
         provider: '{{ provider }}'
         version: '9.1.2-h1'
         install: true
-        restart: false
+        restart: true
       when: |
         system_info_json.response.result.system['sw-version'] is version('9.1.2-h2', '<')
+
+    - name: Wait for Reboot if necessary
+      panos_op:
+        provider: '{{ provider }}'
+        cmd: 'show system info'
+      register: system_info
+      until: system_info is not failed
+      retries: 30
+      delay: 60
+
+    - set_fact: system_info_json="{{ system_info.stdout | from_json }}"
 
     - name: import beta software upgrade image into PAN-OS
       panos_import:
