--- a/upgrade_panos_v10.yml
+++ b/upgrade_panos_v10.yml
@@ -163,6 +163,7 @@
       panos_software:
         provider: '{{ provider }}'
         version: '{{ panos_beta_version }}'
+        download: false
         install: true
         restart: true
 
@@ -179,3 +180,15 @@
       until: result is not failed and (result.stdout | from_json).response.result == 'yes'
       retries: 30
       delay: 60
+
+    - name: Update System Information
+      panos_op:
+        provider: '{{ provider }}'
+        cmd: 'show system info'
+      register: system_info
+      until: system_info is not failed
+      retries: 30
+      delay: 60
+
+    - name: Display new software rev
+      debug: msg="Softare is now {{ system_info_json.response.result.system['sw-version'] }}"
