--- a/upgrade_panos_v10.yml
+++ b/upgrade_panos_v10.yml
@@ -67,7 +67,10 @@
     - set_fact: system_info_json="{{ system_info.stdout | from_json }}"
 
     - debug:
-        msg: "Serial number is {{ system_info_json.response.result.system['serialnumber'] }}"
+        msg: "Serial number is {{ system_info_json.response.result.system['serial'] }}"
+
+    - debug:
+        msg: "Software version is {{ system_info_json.response.result.system['sw-version'] }}"
 
     - name: Check latest content
       # Get an updated dynamic content list
@@ -75,7 +78,6 @@
         provider: '{{ provider }}'
         cmd: 'request content upgrade check'
       register: check
-      changed_when: false
 
     - name: Download latest content
       # Download the latest version
